Fix white gap before footer on mobile - remove feature-badges bottom margin

--- a/assets/feature-badges.css
+++ b/assets/feature-badges.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 768px) {
   .feature-badges {
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
 }
 
